# nand_nor

./: CMakeLists.txt  LICENSE  README.md  compile_random.h  main.cpp  nand_nor.h  nn_integer.h  tests.cpp  utils.h
